Refactor PlanHatUsage to use tokens.getFirst() for improved clarity in user retrieval